--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-absl-py==0.11.0
-alembic==1.4.3
-aniso8601==8.0.0
-astunparse==1.6.3
-cachetools==4.1.1
+absl-py
+alembic
+aniso8601
+astunparse
+cachetools
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
@@ -17,20 +17,20 @@ google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
 grpcio==1.33.2
 gunicorn==20.0.4
-h5py==2.10.0
-idna==2.10
-itsdangerous==1.1.0
+h5py
+idna
+itsdangerous
 Jinja2==2.11.2
 joblib==0.17.0
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-Mako==1.1.3
+Keras
+Keras-Preprocessing
+kiwisolve
+Mako
 Markdown==3.3.3
 MarkupSafe==1.1.1
 matplotlib==3.3.2
 nltk==3.5
-numpy==1.19.4
+numpy
 oauthlib==3.1.0
 opt-einsum==3.3.0
 pandas==1.1.4
