--- a/requirements.txt
+++ b/requirements.txt
@@ -28,12 +28,12 @@ kiwisolve
 Mako
 Markdown==3.3.3
 MarkupSafe==1.1.1
-matplotlib==3.3.2
+matplotlib
 nltk==3.5
 numpy
 oauthlib==3.1.0
-opt-einsum==3.3.0
-pandas==1.1.4
+opt-einsum
+pandas
 Pillow==8.0.1
 protobuf==3.13.0
 pyasn1==0.4.8
@@ -47,14 +47,14 @@ regex==2020.10.28
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
-scikit-learn==0.23.2
-scipy==1.5.4
+scikit-learn
+scipy
 six==1.15.0
 sklearn==0.0
 SQLAlchemy==1.3.20
-tensorboard==2.3.0
+tensorboard
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
+tensorflow
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
