--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ scikit-learn==0.23.2
 scipy==1.5.4
 selenium==3.141.0
 six==1.15.0
-sklearn==0.0
+sklearn
 soupsieve==2.1
 SQLAlchemy==1.3.20
 tensorboard==2.3.0
